SERVER-32441 Fix invariant failure in $or planning.

This fix removes the planner's ability to generate
hash-based index intersection plans between two OR nodes---
an obscure code path that was disabled by default.