src/mongo/db/query/plan_enumerator.cpp
@@ -988,21 +988,17 @@ void PlanEnumerator::enumerateAndIntersect(const IndexToPredMap& idxToFirst,
          ++firstIt) {
         const IndexEntry& oneIndex = (*_indices)[firstIt->first];
 
-        // 'oneAssign' is used to assign indices and subnodes or to
-        // make assignments for the first index when it's multikey.
-        // It is NOT used in the inner loop that considers pairs of
-        // indices.
-        OneIndexAssignment oneAssign;
-        oneAssign.index = firstIt->first;
-        oneAssign.preds = firstIt->second;
-        // Since everything in assign.preds prefixes the index, they all go
-        // at position '0' in the index, the first position.
-        oneAssign.positions.resize(oneAssign.preds.size(), 0);
-
         // We create a scan per predicate so if we have >1 predicate we'll already
         // have at least 2 scans (one predicate per scan as the planner can't
         // intersect bounds when the index is multikey), so we stop here.
-        if (oneIndex.multikey && oneAssign.preds.size() > 1) {
+        if (oneIndex.multikey && firstIt->second.size() > 1) {
+            OneIndexAssignment oneAssign;
+            oneAssign.index = firstIt->first;
+            oneAssign.preds = firstIt->second;
+            // Since everything in assign.preds prefixes the index, they all go at position '0' in
+            // the index, the first position.
+            oneAssign.positions.resize(oneAssign.preds.size(), 0);
+
             oneAssign.canCombineBounds = false;
             // One could imagine an enormous auto-generated $all query with too many clauses to
             // have an ixscan per clause.
@@ -1020,6 +1016,13 @@ void PlanEnumerator::enumerateAndIntersect(const IndexToPredMap& idxToFirst,
 
         // Output (subnode, firstAssign) pairs.
         for (size_t i = 0; i < subnodes.size(); ++i) {
+            OneIndexAssignment oneAssign;
+            oneAssign.index = firstIt->first;
+            oneAssign.preds = firstIt->second;
+            // Since everything in assign.preds prefixes the index, they all go at position '0' in
+            // the index, the first position.
+            oneAssign.positions.resize(oneAssign.preds.size(), 0);
+
             AndEnumerableState indexAndSubnode;
             indexAndSubnode.assignments.push_back(std::move(oneAssign));
             indexAndSubnode.subnodesToIndex.push_back(subnodes[i]);
@@ -1190,22 +1193,6 @@ void PlanEnumerator::enumerateAndIntersect(const IndexToPredMap& idxToFirst,
             AndEnumerableState state;
             state.assignments.push_back(std::move(firstAssign));
             state.assignments.push_back(std::move(secondAssign));
-            andAssignment->choices.push_back(std::move(state));
-        }
-    }
-
-    // TODO: Do we just want one subnode at a time?  We can use far more than 2 indices at once
-    // doing this very easily.  If we want to restrict the # of indices the children use, when
-    // we memoize the subtree above we can restrict it to 1 index at a time.  This can get
-    // tricky if we want both an intersection and a 1-index memo entry, since our state change
-    // is simple and we don't traverse the memo in any targeted way.  Should also verify that
-    // having a one-to-many mapping of MatchExpression to MemoID doesn't break anything.  This
-    // approach errors on the side of "too much indexing."
-    for (size_t i = 0; i < subnodes.size(); ++i) {
-        for (size_t j = i + 1; j < subnodes.size(); ++j) {
-            AndEnumerableState state;
-            state.subnodesToIndex.push_back(subnodes[i]);
-            state.subnodesToIndex.push_back(subnodes[j]);
             andAssignment->choices.push_back(std::move(state));
         }
     }
