src/mongo/db/query/query_planner_test.cpp
@@ -3372,20 +3372,26 @@ TEST_F(QueryPlannerTest, IntersectManySelfIntersections) {
         "{ixscan: {filter: null, pattern: {a:1}}}]}}}}");  // 10
 }
 
-TEST_F(QueryPlannerTest, IntersectSubtreeNodes) {
+TEST_F(QueryPlannerTest, CannotIntersectSubnodes) {
     params.options = QueryPlannerParams::NO_TABLE_SCAN | QueryPlannerParams::INDEX_INTERSECTION;
     addIndex(BSON("a" << 1));
     addIndex(BSON("b" << 1));
     addIndex(BSON("c" << 1));
     addIndex(BSON("d" << 1));
 
-    runQuery(fromjson("{$or: [{a: 1}, {b: 1}], $or: [{c:1}, {d:1}]}"));
+    runQuery(fromjson("{$or: [{a: 1}, {b: 1}], $or: [{c: 1}, {d: 1}]}"));
+
+    assertNumSolutions(2U);
     assertSolutionExists(
-        "{fetch: {filter: null, node: {andHash: {nodes: ["
-        "{or: {nodes: [{ixscan:{filter:null, pattern:{a:1}}},"
-        "{ixscan:{filter:null, pattern:{b:1}}}]}},"
-        "{or: {nodes: [{ixscan:{filter:null, pattern:{c:1}}},"
-        "{ixscan:{filter:null, pattern:{d:1}}}]}}]}}}}");
+        "{fetch: {filter: {$or: [{c: 1}, {d: 1}]}, node: {or: {nodes: ["
+        "{ixscan: {filter: null, pattern: {a: 1}}},"
+        "{ixscan: {filter: null, pattern: {b: 1}}}"
+        "]}}}}");
+    assertSolutionExists(
+        "{fetch: {filter: {$or: [{a: 1}, {b: 1}]}, node: {or: {nodes: ["
+        "{ixscan: {filter: null, pattern: {c: 1}}},"
+        "{ixscan: {filter: null, pattern: {d: 1}}}"
+        "]}}}}");
 }
 
 TEST_F(QueryPlannerTest, IntersectSubtreeAndPred) {
@@ -5064,6 +5070,57 @@ TEST_F(QueryPlannerTest, ContainedOrNotPredicateIsLeadingFieldInBothBranchesInde
         "false, true]], c: [['MinKey', 'MaxKey', true, true]]}}}"
         "]}}}}");
     assertSolutionExists("{cscan: {dir: 1}}}}");
+}
+
+TEST_F(QueryPlannerTest, MultipleContainedOrWithIndexIntersectionEnabled) {
+    params.options = QueryPlannerParams::INCLUDE_COLLSCAN | QueryPlannerParams::INDEX_INTERSECTION;
+    addIndex(BSON("a" << 1));
+    addIndex(BSON("b" << 1 << "a" << 1));
+    addIndex(BSON("c" << 1));
+    addIndex(BSON("d" << 1 << "a" << 1));
+    addIndex(BSON("e" << 1));
+
+    runQuery(fromjson("{$and: [{a: 5}, {$or: [{b: 6}, {c: 7}]}, {$or: [{d: 8}, {e: 9}]}]}"));
+
+    assertNumSolutions(6U);
+
+    // Non-ixisect solutions.
+    assertSolutionExists(
+        "{fetch: {filter: {$or: [{d: 8}, {e: 9}], a: 5}, node: {or: {nodes: ["
+        "{ixscan: {filter: null, pattern: {b: 1, a: 1},"
+        "bounds: {b: [[6,6,true,true]], a: [[5,5,true,true]]}}},"
+        "{ixscan: {filter: null, pattern: {c: 1}, bounds: {c: [[7,7,true,true]]}}}"
+        "]}}}}");
+    assertSolutionExists(
+        "{fetch: {filter: {$or: [{b: 6}, {c: 7}], a: 5}, node: {or: {nodes: ["
+        "{ixscan: {filter: null, pattern: {d: 1, a: 1},"
+        "bounds: {d: [[8,8,true,true]], a: [[5,5,true,true]]}}},"
+        "{ixscan: {filter: null, pattern: {e: 1}, bounds: {e: [[9,9,true,true]]}}}"
+        "]}}}}");
+    assertSolutionExists(
+        "{fetch: {filter: {$and: [{$or: [{b: 6}, {c: 7}]}, {$or: [{d: 8}, {e: 9}]}]}, node: "
+        "{ixscan: {filter: null, pattern: {a: 1}, bounds: {a: [[5,5,true,true]]}}}}}");
+    assertSolutionExists("{cscan: {dir: 1}}}}");
+
+    // Ixisect solutions.
+    assertSolutionExists(
+        "{fetch: {filter: {$or: [{d: 8}, {e: 9}]}, node: {andHash: {nodes: ["
+        "{or: {nodes: ["
+        "{ixscan: {filter: null, pattern: {b: 1, a: 1},"
+        "bounds: {b: [[6,6,true,true]], a: [[5,5,true,true]]}}},"
+        "{ixscan: {filter: null, pattern: {c: 1}, bounds: {c: [[7,7,true,true]]}}}"
+        "]}},"
+        "{ixscan: {filter: null, pattern: {a: 1}, bounds: {a: [[5,5,true,true]]}}}"
+        "]}}}}");
+    assertSolutionExists(
+        "{fetch: {filter: {$or: [{b: 6}, {c: 7}]}, node: {andHash: {nodes: ["
+        "{or: {nodes: ["
+        "{ixscan: {filter: null, pattern: {d: 1, a: 1},"
+        "bounds: {d: [[8,8,true,true]], a: [[5,5,true,true]]}}},"
+        "{ixscan: {filter: null, pattern: {e: 1}, bounds: {e: [[9,9,true,true]]}}}"
+        "]}},"
+        "{ixscan: {filter: null, pattern: {a: 1}, bounds: {a: [[5,5,true,true]]}}}"
+        "]}}}}");
 }
 
 TEST_F(QueryPlannerTest, ContainedOrMultikeyCannotCombineLeadingFields) {
